cargo-features = ["workspace-inheritance"]

[package]
name = "hyperlane-ethereum"
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
# Main block
async-trait.workspace = true
derive-new.workspace = true
swisstronik-ethers-contract = {package = "ethers-contract", git = "https://github.com/SigmaGmbH/ethers-rs.git", branch = "publish", features = ["legacy"], optional = true}
swisstronik-ethers-core = {package="ethers-core", git = "https://github.com/SigmaGmbH/ethers-rs.git", branch = "publish", features = [],  optional = true}
swisstronik-ethers-signers = {package="ethers-signers", git = "https://github.com/SigmaGmbH/ethers-rs.git", branch = "publish", features = ["aws"], optional = true}
swisstronik-ethers = {package="ethers", git = "https://github.com/SigmaGmbH/ethers-rs.git", branch = "publish", features = [], optional = true}
swisstronik-ethers-providers = {package="ethers-providers", git = "https://github.com/SigmaGmbH/ethers-rs.git", branch = "publish", features = [], optional = true}
ethers-contract = {workspace = true, optional = true}
ethers-core = {workspace = true, optional = true}
ethers-signers = {workspace = true, optional = true}
ethers = {workspace = true, optional = true}

futures-util.workspace = true
hex.workspace = true
num.workspace = true
num-traits.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-futures.workspace = true
tracing.workspace = true
url.workspace = true

hyperlane-core = { path = "../../hyperlane-core" }
ethers-prometheus = { path = "../../ethers-prometheus" }

[build-dependencies]
abigen = { path = "../../utils/abigen", features = ["ethers"] }
hyperlane-core = { path = "../../hyperlane-core", features = ["test-utils"] }


[features]
default = ["dep:ethers-contract", "dep:ethers-core", "dep:ethers-signers", "dep:ethers"]
swisstronik = ["hyperlane-core/swisstronik","dep:swisstronik-ethers-contract", "dep:swisstronik-ethers-core", "dep:swisstronik-ethers-signers", "dep:swisstronik-ethers" , "dep:swisstronik-ethers-providers"]